--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-    "token": ""
+    "token": "",
+    "ipa_source_field_name": "",
+    "ipa_target_field_name": "",
+    "translation_source_field_name": "",
+    "translation_target_field_name": ""
 }
